5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1800_2572.log
== SUBMITION (2019-06-13 00:15:08) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = 0
for i in x:
	if i%2!=0:
		y+=1
p = zeros(y, dtype=int)
u = 0
i = 0
for t in r:
	if t%2 !=0:
		p[u] = r[i]
		u+=1
	i+=1
print(p)
-- EXECUTION TIME:
1.10139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 10, in <module>
    for t in r:
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:15:57) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = 0
for i in x:
	if i%2!=0:
		y+=1
p = zeros(w, dtype=int)
u = 0
i = 0
for t in r:
	if t%2 !=0:
		p[u] = r[i]
		u+=1
	i+=1
print(p)
-- EXECUTION TIME:
1.14338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 7, in <module>
    p = zeros(w, dtype=int)
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:16:19) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = 0
for i in x:
	if i%2!=0:
		y+=1
p = zeros(w, dtype=int)
u = 0
o = 0
for t in r:
	if t%2 !=0:
		p[u] = r[o]
		u+=1
	i+=1
print(p)
-- EXECUTION TIME:
1.25754
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 7, in <module>
    p = zeros(w, dtype=int)
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:16:33) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = 0
for i in x:
	if i%2!=0:
		y+=1
p = zeros(w, dtype=int)
u = 0
o = 0
for t in r:
	if t%2 !=0:
		p[u] = r[o]
		u+=1
	o+=1
print(p)
-- EXECUTION TIME:
1.30541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 7, in <module>
    p = zeros(w, dtype=int)
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:17:25) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = 0
for i in x:
	if i%2!=0:
		y+=1
p = zeros(w, dtype=int)
u = 0
o = 0
for t in r:
	if t%2 !=0:
		p[u] = r[o]
		u+=1
	o+=1
print(p)
-- EXECUTION TIME:
1.13305
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 7, in <module>
    p = zeros(w, dtype=int)
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:24:08) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = 0
for i in x:
	if (i%2!=0):
		y+=1
p = zeros(y, dtype=int)
u = 0
o = 0
for t in x:
	if t%2 !=0:
		p[u] = x[o]
		u+=1
	o+=1
print(p)
-- EXECUTION TIME:
1.06
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
x: [12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
x: [31874903]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:26:39) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = 0
for i in x:
	if (i%2!=0):
		y=1+y
p = zeros(y, dtype=int)
u = 0
o = 0
for t in x:
	if t%2 !=0:
		p[u] = x[o]
		u=1 + u
	o=1 + o
print(p)
-- EXECUTION TIME:
1.30757
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
